--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
+    "isomorphic-fetch": "^3.0.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-loader-spinner": "^6.1.6",
     "reactstrap": "^9.2.3"
   }
 }
