--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
