--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,9 @@
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
     "next": "^15.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "nprogress": "^0.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "reactstrap": "^9.2.3"
   }
