--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "html-react-parser": "^5.2.5",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
     "next": "^15.3.2",
