--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API=https://your-backend.com/api
+NEXT_PUBLIC_API=https://seoblog-gb92.vercel.app/
 NEXT_PUBLIC_APP_NAME=SEOBLOG
 NEXT_PUBLIC_DOMAIN=https://your-frontend.com
