--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "striptags": "^3.2.0"
   }
 }
