--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,6 @@
     "morgan": "^1.10.0",
     "shortid": "^2.2.17",
     "slugify": "^1.6.6",
-    "string-strip-html": "^13.4.12"
+    "striptags": "^3.2.0"
   }
 }
