--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,10 @@
+# Production
 NEXT_PUBLIC_API=https://seoblog-gb92.vercel.app/
-NEXT_PUBLIC_APP_NAME=SEOBLOG
 NEXT_PUBLIC_DOMAIN=https://your-frontend.com
+
+# Development (NEW)
+NEXT_PUBLIC_API_DEVELOPMENT=http://localhost:8000/api
+NEXT_PUBLIC_DOMAIN_DEVELOPMENT=http://localhost:3000
+
+# Common
+NEXT_PUBLIC_APP_NAME=SEOBLOG
