--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Production
-NEXT_PUBLIC_API=https://seoblog-gb92.vercel.app/
+NEXT_PUBLIC_API=https://seoblog-gb92.vercel.app
 NEXT_PUBLIC_DOMAIN=https://your-frontend.com
 
 # Development (NEW)
