--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "main": "server.js",
+    "main": "server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.14.3",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
     "shortid": "^2.2.17",
     "slugify": "^1.6.6",
     "striptags": "^3.2.0"
