--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.14.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
+    "serverless-http": "^3.2.0",
     "shortid": "^2.2.17",
     "slugify": "^1.6.6",
     "striptags": "^3.2.0"
