--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "html-react-parser": "^5.2.5",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "^15.3.2",
     "nprogress": "^0.2.0",
+    "query-string": "^9.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
