--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.7",
     "html-react-parser": "^5.2.5",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
@@ -23,6 +24,7 @@
     "nprogress": "^0.2.0",
     "query-string": "^9.2.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
