--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "main": "server.js",
-    "dev": "nodemon server.js",
+    "dev": "node server.js",
     "build": "echo 'No build step needed'"
   },
   "keywords": [],
